objects/CategoryJunction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>取引先カテゴリジャンクション</relationshipLabel>
        <relationshipName>AccJunctionLink</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <description>API参照名に注意</description>
        <label>取引先カテゴリコード</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>取引先カテゴリジャンクション</relationshipLabel>
        <relationshipName>JunctionLink</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CustomerCode__c</fullName>
        <formula>Account__r.Code__c</formula>
        <label>取引先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerUndergraduate__c</fullName>
        <formula>Account__r.Undergraduate__c</formula>
        <label>学部・事業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KigyoTani__c</fullName>
        <label>企業単位</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KokyakuCategory__c</fullName>
        <formula>CategoryName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取引先カテゴリ</label>
        <type>Text</type>
    </fields>
    <label>取引先カテゴリジャンクション</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KokyakuCategory__c</columns>
        <columns>CategoryName__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>取引先カテゴリジャンクション</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>